# projetEPP

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile~  Makefile  README.md
includes/: game.h  piece.h  poc_gui.h  solv.h  solvTest.h  uthash.h  utlist.h
includes/tool/: gfx.h  gfxMLV.h  level_drawer.h  level_drawerMLV.h  level_handler.h
level/: Hardest_Conf_RH.lvl  ane_rouge.txt  rushHour_1.lvl
source/: CMakeLists.txt  game.c  level_1.c  piece.c  poc_gui.c  test_game1.c  test_piece1.c
source/cli/: game_cli.c  game_cli.h  levelHandler.c  levelHandler.h  level_1.c
source/gui/: main.c
source/libgame/: game.c  piece.c
source/solver/: main.c  solv.c
source/test/: test_game1.c  test_piece1.c  test_solv.c
source/tool/: gfx.c  gfxMLV.c  level_drawer.c  level_drawerMLV.c  level_handler.c
