cmake_minimum_required(VERSION 2.6)
project(RushHour)
enable_testing()
option(Coverage "Coverage" OFF)
if(Coverage)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
	set(CMAKE_EXE_LINKER_FLAGS
	    "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage")

	set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
	if(CMAKE_COMPILER_IS_GNUCXX)
		include(CodeCoverage)
		setup_target_for_coverage(${PROJECT_NAME}_coverage ctest coverage)
	endif()
endif()
add_definitions(-std=c99 -Wall -g)
include_directories(includes)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )

add_subdirectory(source)
add_test(test-piece bin/test_piece1)
add_test(test-game bin/test_game1)
add_test(test-solv bin/test_solv)
